Increase -Xmx in SingleFeatureTest to 3GB
In Boron, odl-integration-all may not fit into 2GB Karaf.

Also, remove -XX:MaxPermSize as Java 8 does not support that anymore.

Change-Id: I73853578018b8b2173b5b98d18a855b15f734182
Signed-off-by: Vratko Polak <vrpolak@cisco.com>